--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">WiFiCharts</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="channel">Канал:</string>
+    <string name="strength">Потужність:</string>
 
 </resources>
