--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="channel">Канал:</string>
+    <string name="encryption">Шифрування:</string>
     <string name="strength">Потужність:</string>
 
 </resources>
